--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react",
   "version": "0.0.0",
   "private": true,
+  "homepage": "http://stenkilde.github.io/tarkov-questlog",
   "dependencies": {
+    "gh-pages": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-is": ">= 16.8.0",
@@ -12,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "react-scripts": "latest"
