--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react",
   "version": "0.0.0",
   "private": true,
+  "homepage": "http://olidotjpeg.github.io/tarkov-questlog",
   "dependencies": {
     "gh-pages": "^3.0.0",
     "react": "^16.12.0",
